#16: Fatal error in match crosstable

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,8 +3,9 @@
 Änderungen
 ----------
 v0.6.2 (??.11.2009)
-* #15: League table fixed
-* #14: Limit in matchtable works now
+ * #15: League table fixed
+ * #14: Limit in matchtable works now
+ * #16: Fatal error in match crosstable
 
 v0.6.1 (08.11.2009)
 * #11: tx_cfcleaguefe_models_competitions::getGroup() fixed
