--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
 Änderungen
 ----------
+v0.7.1 (18.05.2010)
+ * DAM includes removed in team list and profile list
+
 v0.7.0 (17.05.2010)
  * Saison-Selection: Sorting fixed
  * PlayerStatistics: Missing include fixed
