Clubmarker shows all teams of a club

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
 Änderungen
 ----------
+v0.7.1 (??.05.2010)
+ * It is possible to output all teams of a club.
+
 v0.7.1 (18.05.2010)
  * DAM includes removed in team list and profile list
 
