--- a/ChangeLog
+++ b/ChangeLog
@@ -2,10 +2,12 @@
 
 Änderungen
 ----------
-v0.7.1 (??.05.2010)
+v0.7.2 (??.05.2010)
  * It is possible to output all teams of a club.
  * T3-Register T3SPORTS_GROUP in match is filled preferred with teams agegroup
  * Bugfix: club logos without DAM
+ * New view stadium list with GoogleMaps integration
+ * Stadium details with GoogleMaps integration
 
 v0.7.1 (18.05.2010)
  * DAM includes removed in team list and profile list
