--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@ v0.7.2 (??.05.2010)
  * Bugfix: club logos without DAM
  * New view stadium list with GoogleMaps integration
  * Stadium details with GoogleMaps integration
+ * Team list with GoogleMaps integration
 
 v0.7.1 (18.05.2010)
  * DAM includes removed in team list and profile list
