--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
 Änderungen
 ----------
+v0.7.3 (04.07.2010)
+ * Country integration for stadiums and clubs.
+
 v0.7.2 (03.07.2010)
  * It is possible to output all teams of a club.
  * T3-Register T3SPORTS_GROUP in match is filled preferred with teams agegroup
