--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 
 Änderungen
 ----------
+v0.7.4 (??.07.2010)
+ * Show goals own for opponent team
+ * Draw map icons with GIFBuilder
+
 v0.7.3 (04.07.2010)
  * Country integration for stadiums and clubs.
 
