--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 
 Änderungen
 ----------
+v0.7.5 (??.08.2010)
+ * All references to extensions lib/div removed.
+ * New chart builder class from rn_base used
+
 v0.7.4 (17.07.2010)
  * Show goals own for opponent team
  * Draw map icons with GIFBuilder
