--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 
 Änderungen
 ----------
+v0.7.6 (16.09.2010)
+ * Two new markers for profiles: ###PROFILE_DBNAME### and ###PROFILE_DBNAMEREV### with support for stage name
+ * #42: remove marker ###MATCH_LEAGUETABLE###
+
 v0.7.5 (03.09.2010)
  * All references to extensions lib/div removed.
  * New chart builder class from rn_base used
