--- a/ChangeLog
+++ b/ChangeLog
@@ -3,11 +3,12 @@
 Änderungen
 ----------
 
-v0.8.2 (??.10.2010)
- * 52: Exception in league table alltime fixed.
+v0.8.2 (??.05.2011)
+ * #52: Exception in league table alltime fixed.
  * ROLL-Markers added and configured in TeamView for players
  * ScopeSelection configured for report plugin
  * New Leaguetable: Set H2H-mode by TS: leaguetable.comparatorClass = tx_cfcleaguefe_table_football_ComparatorH2H
+ * Match report: display match notes with listmarker.
 
 v0.8.1 (17.10.2010)
  * Leaguetable: new head to head mode. That means the direct match decides the position if points are equals. Set this by TS: leaguetable.compareMethod = compareTeamsH2H. Thanks to Christophe Denis!
