--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 ----------
 
 v0.8.2 (??.05.2011)
+ * Match date: show no kickoff time in FE if not set. Thanks to saerdna78 from typo3.org forum!
  * #52: Exception in league table alltime fixed.
  * ROLL-Markers added and configured in TeamView for players
  * ScopeSelection configured for report plugin
