--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@ v0.8.2 (??.05.2011)
  * New marker ###MATCH_DCRESULTSUFFIX### to indicate extra time and penalty
  * Leaguetable works for icehockey in 2 and 3 point system
  * NPE in distance calculation fixed if wec_map is not installed
+ * Substitution cache disabled for matchlist to save memory
 
 v0.8.1 (17.10.2010)
  * Leaguetable: new head to head mode. That means the direct match decides the position if points are equals. Set this by TS: leaguetable.compareMethod = compareTeamsH2H. Thanks to Christophe Denis!
